--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Patient Records</title>
+    <title>Welcome to Patient Records</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -13,16 +13,16 @@
 
 <div class="container">
     <hr>
-    <h1>Patient records</h1>
+    <h1>Welcome to Patient Records</h1>
     <hr>
 
     <form action="http://localhost:8080/patients/view" method="GET">
         
-        <button type="submit" class="btn btn-primary">View</button>
+        <button type="submit" class="btn btn-primary">View Patients</button>
     </form>
     <form action="http://localhost:8080/patients/add" method=GET>
         
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button type="submit" class="btn btn-primary">Add New Patient</button>
     </form>
 
 </div>
