--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,54 +14,15 @@
     <div class="container">
         <hr>
         <h1>List of Patients</h1>
-        <hr>
-
-        <div>
-            <div class="row" name="name">
-            </div>
-        </div>
+        <ul>
+            <%for (i= 0; i < array.length; i++){%>
+          <%= array[i]%>
+          <% } %>
+          
+        </ul>
     </div>
-<div id="editBookModal" class="container" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Edit Book</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
 
-            <div class="modal-body">
-                    <form action="http://localhost:8080/patients/view" method="GET">
-                          <!--Name-->
-        <div class="form-group">
-            <label for="Name">Patient Name:</label>
-            <input class="form-control" name = "name">
-        </div>
-        <!--Age-->
-        <div class="form-group">
-            <label for="Names">Age(in months):</label>
-            <input class="form-control" name = "age">
-        </div>
-        <!--Height-->
-        <div class="form-group">
-            <label for="ISBN">Height(in cm):</label>
-            <input class="form-control" name ="Height">
-        </div>
-        <!--Notes-->
-        <div class="form-group">
-            <label for="ISBN">Notes:</label>
-            <input class="form-control" name ="Notes">
-        </div>
-            
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-            </div>
-
-        </div>
-    </div>
-</div>
-
+    
 <div class="container">
     <hr>
     <h1>View Patient Records</h1>
@@ -69,6 +30,10 @@
     <form action="http://localhost:8080/" method="GET">
         
         <button type="submit" class="btn btn-primary">Home</button>
+    </form>
+    <form action="http://localhost:8080/patients/view/edit" method="GET">
+        
+        <button type="submit" class="btn btn-primary">Edit Patient</button>
     </form>
 </div>
 </body>
